objects/Utilization__c.object
<CustomObject>
    <description>This object tracks the Outstanding, Limit, Utilization of each products of customer (Last 12 months)
Display as Visualforce tab in the customer detail page</description>
    <fields>
        <fullName>As_of_Date__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CIS_ID__c</fullName>
        <label>CIS ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ultilizations</relationshipLabel>
        <relationshipName>Ultilizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OD_AVG_OUT__c</fullName>
        <label>OD AVG OUT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OD_Limit__c</fullName>
        <label>OD Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OD_Utilization__c</fullName>
        <label>OD %Utilization</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PN_AVG_OUT__c</fullName>
        <label>PN AVG OUT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PN_Limit__c</fullName>
        <label>PN Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PN_Utilization__c</fullName>
        <label>PN %Utilization</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TF_AVG_OUT__c</fullName>
        <label>TF AVG OUT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TF_Limit__c</fullName>
        <label>TF Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TF_Utilization__c</fullName>
        <label>TF %Utilization</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Utilization</label>
    <nameField>
        <label>Month</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utilizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>